haximadir   = $(datadir)/nazghul/haxima
bin_SCRIPTS = haxima.sh
CLEANFILES = haxima.sh
SUBDIRS = music sounds ai effects maps places townsfolk

haxima.sh: Makefile
	echo '#!/bin/sh' > $@ 
	echo '"@bindir@/nazghul" -I "@datadir@/nazghul/haxima" -G "$$HOME/.haxima" "$$@"' >> $@

#haxima_DATA = $(wildcard *.scm) $(wildcard *.png) $(wildcard *.wav)
haxima_DATA = \
	640x480_splash.png \
	abandoned-cellar.scm \
	abandoned-farm.scm \
	abe.scm \
	abigail.scm \
	ability.scm \
	absalot.scm \
	addons.png \
	adornments.png \
	alchemist.scm \
	alex.scm \
	altar-room.scm \
	amy.scm \
	anaxes.scm \
	ancient-derelict.scm \
	angela.scm \
	angriss-lair.scm \
	angriss.scm \
	ankh-shrine.scm \
	anne.scm \
	arms.png \
	arms.scm \
	bandit-hideout.scm \
	bart.scm \
	beds.scm \
	bigobjects.png \
	bill.scm \
	bim.scm \
	blendterrains.scm \
	bodies.png \
	bole.scm \
	books.png \
	books.scm \
	bridge.scm \
	brundegardt.scm \
	camping-map.scm \
	cast-ui.scm \
	chanticleer.scm \
	charset.png \
	chester.scm \
	clothes.png \
	combat-maps.scm \
	containers.scm \
	conv.scm \
	creatures.png \
	crypt.scm \
	cursor.png \
	dank-cave.scm \
	demon-gate.scm \
	demo.scm \
	dennis.scm \
	deric.scm \
	disarm-trap.scm \
	dog_9.wav \
	door.scm \
	doris.scm \
	douglas.scm \
	drawbridge.scm \
	earl.scm \
	eastpass.scm \
	edge-spawn.scm \
	edward.scm \
	effects.png \
	enchanter.scm \
	enchanters-tower-mech.scm \
	enchanters-tower.scm \
	enchanters-tower-zones.scm \
	endless-deeps-mech.scm \
	endless-deeps.scm \
	engineer.scm \
	engineers-hut.scm \
	eye-of-brune.scm \
	fields.scm \
	fing.scm \
	fire_sea.scm \
	florinth.scm \
	food.png \
	food.scm \
	forsaken-prison.scm \
	frame.png \
	game.scm \
	gamestart-mech.scm \
	gamestart.scm \
	gamestart-statues.scm \
	gate-guard.scm \
	gen.scm \
	ghertie.scm \
	gholet.scm \
	glasdrin.scm \
	gold_frame.png \
	green-tower-lower.scm \
	green-tower.scm \
	gregor.scm \
	gregors-hut.scm \
	guard-call.scm \
	gwen.scm \
	hackle.scm \
	haxima.scm \
	haximatext.png \
	henry.scm \
	hidden.scm \
	hirespeople.png \
	horse.wav \
	humanoids.png \
	ifc.scm \
	ilya.scm \
	ini.scm \
	init.scm \
	items.scm \
	jake.scm \
	janice.scm \
	jeffreys.scm \
	jess.scm \
	jewelry.png \
	jewelry.scm \
	jim.scm \
	joel.scm \
	jones.scm \
	jorn.scm \
	kalcifax.scm \
	kama.scm \
	kathryn.scm \
	keep_crypt_mech.scm \
	keep.scm \
	kern-init.scm \
	keys.scm \
	kobj.scm \
	kraken-lakes.scm \
	kun.scm \
	kurpolis.scm \
	landslide.scm \
	layers.scm \
	lever.scm \
	lia.scm \
	lich-tomb.scm \
	locations.scm \
	loc.scm \
	lost-halls-mech.scm \
	lost-halls.scm \
	luximene.scm \
	main-menu.scm \
	mans-hideout.scm \
	map.png \
	may.scm \
	meaney.scm \
	melvin.scm \
	merciful-death.scm \
	mesmeme.scm \
	miggs.scm \
	mimic.scm \
	minimal-game.scm \
	minimal-start.scm \
	money.png \
	money.scm \
	monster-generator.scm \
	monsters.png \
	moongate-clearing-map.scm \
	moongate-clearing-mech.scm \
	moongate-clearing.scm \
	moongate.scm \
	moon.scm \
	moons.png \
	mouse.scm \
	mushroom-cave.scm \
	nate.scm \
	naz.scm \
	necromancer.scm \
	necromancers-lair.scm \
	newfolks.png \
	newmonst.png \
	newterrain.png \
	nossifer.scm \
	npc-types.scm \
	objs.scm \
	occs.scm \
	old-absalot.scm \
	old-mine.scm \
	oparine.scm \
	oscar.scm \
	palette.scm \
	parties.scm \
	patch.scm \
	pitfalls.png \
	pitfalls.scm \
	place.scm \
	player.scm \
	poor-house.scm \
	portals.scm \
	portcullis.scm \
	potions.png \
	potions.scm \
	powers.scm \
	pre-entry-hooks.scm \
	prices.scm \
	prison.scm \
	progress_bar_image.png \
	pseudorandom-map.scm \
	quests-data.scm \
	quests-data-static.scm \
	quests-mech.scm \
	quests.png \
	quest-sys.scm \
	r2a_mech.scm \
	raise-merciful-death.scm \
	reagents.png \
	reagents.scm \
	regions.scm \
	rep.scm \
	road_to_absalot.scm \
	roland.scm \
	rune.png \
	runes.scm \
	runestones.png \
	scrolls.png \
	scrolls.scm \
	selene.scm \
	sfx.png \
	shapes.png \
	shard.scm \
	ship.png \
	shroom.scm \
	sign.scm \
	signs.png \
	silas.scm \
	skills.scm \
	slimy-cavern.scm \
	slimy-cavern-zones.scm \
	slywan.scm \
	sounds.scm \
	special.png \
	special.scm \
	species.scm \
	spells.png \
	spells.scm \
	spider.scm \
	splash.png \
	sprite-sets.scm \
	sprites.scm \
	start-new-game.scm \
	statue-of-justice.scm \
	step.scm \
	steward.scm \
	stone-lantern.png \
	stone-lantern.scm \
	talking-ankh.scm \
	tblit.scm \
	tbl.scm \
	terrains.scm \
	terrain-to-ptype.scm \
	test-map.scm \
	test-place.scm \
	tetzl.scm \
	the-man.scm \
	thiefs_den.scm \
	thorald.scm \
	thud.scm \
	timer.scm \
	tim.scm \
	tools.png \
	tools.scm \
	tooth.scm \
	tower.png \
	town-entry.scm \
	townsman.scm \
	traps_1.scm \
	traps_2.scm \
	traps_3_mechs.scm \
	traps_3.scm \
	traps_4.scm \
	traps.scm \
	treasury.scm \
	trigrave.scm \
	trog.scm \
	turns.scm \
	tutorial_cave.scm \
	tutorial.scm \
	tutorial_town.scm \
	tutorial_wilderness.scm \
	urt.scm \
	valus.scm \
	vehicles.scm \
	voidgap-mech.scm \
	voidgap-passage.scm \
	void-map.scm \
	void.scm \
	void-temple.scm \
	warritrix.scm \
	weather-vane.scm \
	westpass.scm \
	wind-bridge.scm \
	world-map-regions.scm \
	world-map.scm \
	world.scm \
	wyrm.png \
	yellow-slime.scm \
	zane.scm \
	zones.scm \
	ztats-quest-ui.scm

EXTRA_DIST = $(haxima_DATA)

MAINTAINERCLEANFILES = Makefile.in
