SUBDIRS = audionetwork

musicdir = $(datadir)/nazghul/haxima/music

#music_DATA = credits.txt $(wildcard *.mid) $(wildcard *.scm) $(wildcard *.ogg) $(wildcard *.wav)
music_DATA = credits.txt \
	78824__primordiality__fanfare-3.wav \
	78825__primordiality__fanfare-4.wav \
	ballad.mid \
	ballad.ogg \
	bassoons-and-harpsichord.mid \
	bassoons-and-harpsichord.ogg \
	double-trios.mid \
	double-trios.ogg \
	dragon-quest.mid \
	dragon-quest.ogg \
	dragon-slayer.mid \
	dragon-slayer.ogg \
	fair-camelot.mid \
	fair-camelot.ogg \
	game-music2.mid \
	game-music2.ogg \
	harpsichord-piece.mid \
	harpsichord-piece.ogg \
	into-battle.mid \
	into-battle.ogg \
	Lute-and-recorder-ballad.mid \
	Lute-and-recorder-ballad.ogg \
	medieval-quest.mid \
	medieval-quest.ogg \
	minstrel-dance.mid \
	minstrel-dance.ogg \
	Minuet-like-Mozart.mid \
	Minuet-like-Mozart.ogg \
	music.scm \
	plainchant-recorder-trio.mid \
	plainchant-recorder-trio.ogg \
	wind-trio.mid \
	wind-trio.ogg

EXTRA_DIST = $(music_DATA)

MAINTAINERCLEANFILES = Makefile.in
