soundsdir = $(datadir)/nazghul/haxima/sounds

#sounds_DATA = LICENSE $(wildcard *.ogg) $(wildcard *wav)
sounds_DATA = LICENSE \
	ANW1520_66_This-Glorious-Land-9-Sting.ogg \
	ANW1857_28_The-Flag-13-Sting.ogg \
	boom.wav \
	cannon.wav \
	chest-open.ogg \
	clock-chime.wav \
	clock.wav \
	damage.wav \
	door-close.ogg \
	door-open.ogg \
	drop.ogg \
	fireblast.wav \
	get.ogg \
	lightning.wav \
	mmm.ogg \
	money.ogg \
	moongate-enter.wav \
	portcullis.ogg \
	ready.ogg \
	river.ogg \
	splashing.wav \
	squishing.wav \
	squish.ogg \
	swallow.ogg \
	swish.wav \
	trumpet_fanfare.ogg \
	unready.ogg \
	walking.wav \
	wind.wav

EXTRA_DIST = $(sounds_DATA)

MAINTAINERCLEANFILES = Makefile.in
