audionetworkdir = $(datadir)/nazghul/haxima/music/audionetwork

#audionetwork_DATA = LICENSE $(wildcard *.mp3)
audionetwork_DATA = LICENSE \
	ANW1082_10_Princes-In-The-Tower.ogg \
	ANW1086_01_Back-Canyon.ogg \
	ANW1097_06_Autumn.ogg \
	ANW1120_08_Hornpipe.ogg \
	ANW1132_06_New-Age.ogg \
	ANW1254_05_Burned-Earth.ogg \
	ANW1500_06_Nevada-Snakebite.ogg \
	ANW1520_36_For-King-And-Country-7-Sting.ogg \
	ANW1520_47_Market-Town-5-30.ogg \
	ANW1520_66_This-Glorious-Land-9-Sting.ogg \
	ANW1855_08_Jolly-Sailor.ogg \
	ANW1857_24_The-Flag-9-Sting.ogg \
	ANW1857_28_The-Flag-13-Sting.ogg \
	ANW1877_03_Signals.ogg \
	ANW1985_37_Glue-4-60.ogg \
	ANW2007_01_Campaign.ogg \
	ANW2038_14_Serene-Scene.ogg \
	ANW2052_01_Crash.ogg \
	ANW2068_22_Lethal-Weapon-3.ogg \
	ANW2087_05_Brooding-Thoughts.ogg \
	ANW2105_77_To-The-Rescue-6-Sting.ogg \
	ANW2105_78_To-The-Rescue-7-Sting.ogg \
	ANW2110_01_Determined.ogg \
	ANW2152_05_Final-Road.ogg \
	ANW2166_16_Quiet-Altitude-2-60.ogg \
	ANW2166_21_Acoustic-Hymn-4-60.ogg \
	ANW2169_05_Tense-Realisation.ogg \
	ANW2169_18_Unfinished-Business-3.ogg \
	ANW2169_27_Space-Infinity-3.ogg \
	ANW2171_03_Betrayed.ogg \
	ANW2175_79_Suspense-5.ogg \
	ANW2175_80_Suspense-6.ogg \
	ANW2175_81_Suspense-7.ogg \
	ANW2202_16_Shore-Leave-7-30.ogg \
	ANW2202_23_All-At-Sea-3.ogg \
	ANW2202_37_Silvers-Set-4-60.ogg \
	ANW2202_69_Rock-The-Boat-9-30.ogg \
	ANW2202_97_John-Silvers-Dance-3.ogg \
	ANW2209_13_Four-Leaf-Clover-8-30.ogg \
	ANW2211_01_Journey-Begins.ogg \
	ANW2213_11_Like-A-Ghost-2.ogg \
	ANW2214_29_Angels-In-The-Breeze-7-60.ogg

EXTRA_DIST = $(audionetwork_DATA)

MAINTAINERCLEANFILES = Makefile.in
